hover text displayed in top-right of graph area : switch off border; move down to avoid overlapping top border of graph
app.scss : add styling for #holder > div.popover.no-border : no border for popover when displayed in top-right of graph, i.e. ! hoverNearElement
hover.js : showHover() : add .no-border to options.template <div.popover >
part of #223.
frontend/app/ :
 0185787 68323 Feb 10 19:18  components/axis-tracks.js
 6a1aa1f 38942 Feb 10 19:27  styles/app.scss
 6111492  3812 Feb 10 19:30  utils/hover.js

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -627,6 +627,19 @@ path.syntenyEdge.inverted
   stroke-dasharray: 16 8 16 40;
 }
 
+/*----------------------------------------------------------------------------*/
+/* no border for popover when displayed in top-right of graph, i.e. ! hoverNearElement */
+#holder > div.popover.no-border
+{
+  border : none;
+  box-shadow : none;
+
+  /* avoid overlapping the top border of the graph area */
+  margin-top: 20px;
+  .popover-content {
+      padding-top : 0;
+  }
+}
 
 /*----------------------------------------------------------------------------*/
 /* Button */
